ags (1.4.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* replaced pa_mainloop_new() by pa_glib_main_loop_new()
	* minor changes

ags (1.4.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLiveDssiBridge and AgsLiveLv2Bridge notation editor channel mapping

ags (1.4.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restore of AgsPattern
	* fixed ags_open_file.c to use correct file link
	* fixed async-safe ags_simple_file_read_machine()

ags (1.4.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_apply_synth.c to update rt-template
	* improved ags_clear_audio_signal.c to update rt-template

ags (1.4.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsRecallID:recycling property
	* improved mutex lookup of rt-safe functions

gs (1.4.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor-fixes to updating AGS_AUDIO_SIGNAL_RT_TEMPLATE

ags (1.4.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AGS_AUDIO_SIGNAL_RT_TEMPLATE
	* implemented AgsAudioSignal::rt-template property
	* improved rt-safe option

ags (1.4.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added missing rt-safe configuration option

ags (1.4.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented configuration of AgsThreadPool:max-unused-threads and AgsThreadPool:max-threads
	* improved ags_performance_preferences_reset() to reset super-threaded scope

ags (1.4.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsPreferences to apply conservative default configuration

ags (1.4.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* conservative default configuration
	* fixed SIGSEGV as configuring super-threaded scope audio
	* fixed SIGSEGV during ags_channel_recursive_cancel()

ags (1.4.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]