@@ -1,68 +1,0 @@
-/* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2017 Joël Krähemann
- *
- * This file is part of GSequencer.
- *
- * GSequencer is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * GSequencer is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with GSequencer.  If not, see <http://www.gnu.org/licenses/>.
- */
-
-#include <ags/X/editor/ags_level_callbacks.h>
-
-#include <math.h>
-
-gboolean
-ags_level_expose_event(GtkWidget *widget, GdkEventExpose *event, AgsLevel *level)
-{
-  cairo_t *cr;
-  
-  if(!gtk_widget_get_visible(widget) ||
-     !gtk_widget_is_drawable(widget) ||
-     !gtk_widget_get_mapped(widget) ||
-     !gtk_widget_get_realized(widget)){
-    return(TRUE);
-  }
-
-  cr = gdk_cairo_create(widget->window);
-
-  ags_level_paint(level,
-		  cr);
-
-  cairo_surface_mark_dirty(cairo_get_target(cr));
-  cairo_destroy(cr);
-
-  return(TRUE);
-}
-
-gboolean
-ags_level_configure_event(GtkWidget *widget, GdkEventConfigure *event, AgsLevel *level)
-{
-  cairo_t *cr;
-
-  if(!gtk_widget_get_visible(widget) ||
-     !gtk_widget_is_drawable(widget) ||
-     !gtk_widget_get_mapped(widget) ||
-     !gtk_widget_get_realized(widget)){
-    return(FALSE);
-  }
-
-  cr = gdk_cairo_create(widget->window);
-
-  ags_level_paint(level,
-		  cr);
-
-  cairo_surface_mark_dirty(cairo_get_target(cr));
-  cairo_destroy(cr);
-
-  return(FALSE);
-}
